# rag-containers

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  dependencies.py  main.py  requirements.txt  routes.py  schemas.py
core/: client.py
embeddings_service/: Dockerfile  main.py  requirements.txt  schemas.py
resources/: .env
utils/: __init__.py  chunking.py  embedding_client.py  env.py  ids.py  payload.py  query_filters.py  serialization.py  utils.py
